testdata/baselines/reference/submodule/compiler/noAsConstNameLookup.errors.txt
error TS2318: Cannot find global type 'Array'.
error TS2318: Cannot find global type 'CallableFunction'.
error TS2318: Cannot find global type 'Function'.
error TS2318: Cannot find global type 'IArguments'.
error TS2318: Cannot find global type 'NewableFunction'.
error TS2318: Cannot find global type 'RegExp'.
error TS2318: Cannot find global type 'String'.
error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
error TS2552: Cannot find name 'Number'. Did you mean 'number'?
error TS2552: Cannot find name 'Object'. Did you mean 'object'?
noAsConstNameLookup.ts(4,70): error TS2583: Cannot find name 'Promise'. Do you need to change your target library? Try changing the 'lib' compiler option to 'es2015' or later.
noAsConstNameLookup.ts(9,25): error TS2583: Cannot find name 'Promise'. Do you need to change your target library? Try changing the 'lib' compiler option to 'es2015' or later.
noAsConstNameLookup.ts(17,18): error TS2583: Cannot find name 'Promise'. Do you need to change your target library? Try changing the 'lib' compiler option to 'es2015' or later.
noAsConstNameLookup.ts(19,23): error TS2339: Property 'forEach' does not exist on type '{}'.
noAsConstNameLookup.ts(19,31): error TS7006: Parameter 'c' implicitly has an 'any' type.


!!! error TS2318: Cannot find global type 'Array'.
!!! error TS2318: Cannot find global type 'CallableFunction'.
!!! error TS2318: Cannot find global type 'Function'.
!!! error TS2318: Cannot find global type 'IArguments'.
!!! error TS2318: Cannot find global type 'NewableFunction'.
!!! error TS2318: Cannot find global type 'RegExp'.
!!! error TS2318: Cannot find global type 'String'.
!!! error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
!!! error TS2552: Cannot find name 'Number'. Did you mean 'number'?
!!! error TS2552: Cannot find name 'Object'. Did you mean 'object'?
==== noAsConstNameLookup.ts (5 errors) ====
    // Repros from #44292
    
    type Store = { a: 123 }
    export type Cleaner = <W extends Store>(runner: FeatureRunner<W>) => Promise<any>
                                                                         ~~~~~~~
!!! error TS2583: Cannot find name 'Promise'. Do you need to change your target library? Try changing the 'lib' compiler option to 'es2015' or later.
    
    export class FeatureRunner<W extends Store> {
        private readonly cleaners: Cleaner[] = []
    
        async runFeature(): Promise<any> {
                            ~~~~~~~
!!! error TS2583: Cannot find name 'Promise'. Do you need to change your target library? Try changing the 'lib' compiler option to 'es2015' or later.
            const objectWhichShouldBeConst = {
                flags: {},
                settings: {},
            } as const;
            return objectWhichShouldBeConst
        }
    
        async run(): Promise<any> {
                     ~~~~~~~
!!! error TS2583: Cannot find name 'Promise'. Do you need to change your target library? Try changing the 'lib' compiler option to 'es2015' or later.
            const result = {}
            this.cleaners.forEach(c => c(this))
                          ~~~~~~~
!!! error TS2339: Property 'forEach' does not exist on type '{}'.
                                  ~
!!! error TS7006: Parameter 'c' implicitly has an 'any' type.
            return result
        }
    }
    
    export class C<T> {
        f(): void {
            let one = 1 as const;
        }
    }
    new C<string>().f();
    